src/objects/mkto_si__EmailActivityCache__c.object
<CustomObject>
    <fields>
        <fullName>mkto_si__AccountLinkName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AccountLinkName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__AccountLink__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AccountLink</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>mkto_si__ActivityDT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ActivityDT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_si__Campaign__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__ClickCount__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ClickCount</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__ContactLinkName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ContactLinkName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__ContactLink__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ContactLink</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>mkto_si__Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__MessageId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MessageId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__MessageThreadIndex__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MessageThreadIndex</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__MessageType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MessageType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__OpenCount__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OpenCount</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__RowNum__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RowNum</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Subject__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__ThreadNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ThreadNumber</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__ThreadSubject__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ThreadSubject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__TotalCount__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TotalCount</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <label>EmailActivityCache</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>EmailActivityCache Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EmailActivityCache</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>